Closed
Bug 216568
Opened 22 years ago
Closed 20 years ago
Implement <svg:image>
Categories
(Core :: SVG, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: darryl, Assigned: tor)
References
()
Details
Attachments
(1 file, 4 obsolete files)
29.10 KB,
patch
|
pavlov
:
review+
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.5b) Gecko/20030809
Build Identifier: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.5b) Gecko/20030809
PNG and JPG files referenced by the <image> element do not render.
Note: the <image> element is part of the full, basic, and tiny svg profile.
Reproducible: Always
Steps to Reproduce:
Open w3c test suite test "struct-image-01-t.svg"
Actual Results:
Nothing renders.
Expected Results:
A PNG and a JPEG image should render on the right hand side.
![]() |
||
Updated•21 years ago
|
Status: UNCONFIRMED → NEW
Ever confirmed: true
Updated•21 years ago
|
Summary: PNG and JPG referenced by <image> do not render → Implement <svg:image>
Comment 1•21 years ago
|
||
Here is an updated patch for the <switch> code. In addition to bringing it up
to date with the current tree, I have implemented the systemLanguage stuff.
I'm not entirely happy with the implementation. For example, having to
implement DashMatch in nsCSSFrameConstructor really doesn't make sense, but it
works. Any comments or suggestions are welcome. I'm going to start to tackle
the feature stuff next.
Comment 2•21 years ago
|
||
Oops -- sorry, wrong bug!!
Updated•21 years ago
|
Attachment #142978 -
Attachment is obsolete: true
![]() |
||
Comment 3•20 years ago
|
||
Mass reassign of SVG bugs that aren't currently being worked on by Alex to
general@svg.bugs. If you think someone should be assigned to your bug you can
join the #svg channel on mozilla.org's IRC server ( irc://irc.mozilla.org/svg )
where you can try to convince one of the SVG hackers to work on it. We aren't
always there, so if you don't get a response straight away please try again later.
Assignee: alex → general
Comment 4•20 years ago
|
||
2 comments: scripting and copyright
Scripting:
This example contains scripting to tell the current UK time.
<image xlink:href='http://www.peepo.co.uk/res/watch.svg' x='30' y='30'
width='150' height='150'/>
scripting may involve security issues.
so may be only support local files?
<image xlink:href='../res/watch.svg' x='30' y='30' width='150' height='150'/>
Copyright:
<image> support is pretty much essential.
SVG resources are likely to include CSS RDF scripting and SVG.
<image> offers a simple way to identify which parts of a file are covered by
each copyright licence. I am not aware of any other method that may be
available, where more than one licence is included.
peepo.co.uk is public domain, but we are awaiting a suitable way to include
trademarks, non-public domain creative commons licence, and unattributable
resources.
Thanks
Verbose on the debug spew and will need work for animations,
but does work. Depends on the nsISVGRendererSurface code
introduced by the group opacity patch (bug 267195).
Attachment #165091 -
Attachment is obsolete: true
![]() |
||
Comment 7•20 years ago
|
||
Just from a quick glance:
1) This doesn't seem to support animated images
2) I'm not sure why this is copying the animation-resetting hack from
nsHTMLImageElement -- that's just needed for DOM0 compat with existing
content...
Attachment #166827 -
Attachment is obsolete: true
Attachment #167364 -
Flags: review?(pavlov)
![]() |
||
Comment 10•20 years ago
|
||
Tim, can you disable rendering of <svg:image> if either the 'width' or the
'height' attributes are set to zero by putting a check into nsSVGImageFrame::Paint.
Updated•20 years ago
|
Attachment #167364 -
Flags: review?(pavlov) → review+
Assignee | ||
Comment 11•20 years ago
|
||
Checked in.
Status: ASSIGNED → RESOLVED
Closed: 20 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•