Bug 216568 - <svg:image> implementation.  r=pavlov