layout/base/nsCSSFrameConstructor.cpp
@@ -210,6 +210,8 @@ extern nsresult
 NS_NewSVGStopFrame(nsIPresShell *aPresShell, nsIContent *aContent, nsIFrame *aParentFrame, nsIFrame** newFrame);
 nsresult
 NS_NewSVGMarkerFrame(nsIPresShell* aPresShell, nsIContent* aContent, nsIFrame** aNewFrame);
+extern nsresult
+NS_NewSVGImageFrame(nsIPresShell *aPresShell, nsIContent *aContent, nsIFrame** newFrame);
 #endif
 
 #include "nsIDocument.h"
@@ -7290,6 +7292,9 @@ nsCSSFrameConstructor::ConstructSVGFrame(nsIPresShell*            aPresShell,
   else if (aTag == nsSVGAtoms::marker) {
     processChildren = PR_TRUE;
     rv = NS_NewSVGMarkerFrame(aPresShell, aContent, &newFrame);
+  }
+  else if (aTag == nsSVGAtoms::image) {
+    rv = NS_NewSVGImageFrame(aPresShell, aContent, &newFrame);
   }
   
   if (newFrame == nsnull) {
